Commit 1 Oct 14th 8:50Am New files added - [SignUp,VCADB_users] Files modified - [Login,Main,securityService,WEB-INF,profiles,webapp,pom.xml,app.properties,pages-config.json]

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,6 @@
-#Sat Oct 13 19:54:04 UTC 2018
+#Sun Oct 14 03:00:23 UTC 2018
+app.environment.dbpassword=${app.environment.dbpassword}
+app.environment.dbuser=${app.environment.dbuser}
 app.proxy.enabled=${app.proxy.enabled}
 app.proxy.host=${app.proxy.host}
 app.proxy.password=${app.proxy.password}
