Almost final changes to the app Oct 15th 11:56AM New files added - [AddEvent,AddVenue,EditEvents,EditVenues,EventDetails,EventsList,icons,splashes] Files modified - [Main,SignUp,VCADB_users,securityService,webapp,project-security.xml,pages-config.json]

--- a/services/VCADB_users/src/VCADB_users-procedures.mappings.json
+++ b/services/VCADB_users/src/VCADB_users-procedures.mappings.json
@@ -1,1 +1,64 @@
-{ }
+{
+  "add_attendee" : {
+    "procedureString" : "CALL add_attendee(?,?,?)",
+    "parameters" : [ {
+      "name" : "email_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    }, {
+      "name" : "event_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    }, {
+      "name" : "action_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    } ]
+  },
+  "change_attendee" : {
+    "procedureString" : "CALL change_attendee(?,?,?)",
+    "parameters" : [ {
+      "name" : "email_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    }, {
+      "name" : "event_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    }, {
+      "name" : "action_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    } ]
+  }
+}
