Commit 2 New files added - [icon-1024.png] Files modified - [webapp,deployment.properties]

--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -1,5 +1,5 @@
-app.environment.dbpassword=Cpnarl11^
-app.environment.dbuser=srao
+app.environment.dbpassword=
+app.environment.dbuser=
 app.proxy.enabled=false
 app.proxy.host=
 app.proxy.password=
@@ -30,7 +30,7 @@ security.general.frameOptions.mode=SAMEORIGIN
 security.general.rememberMe.enabled=true
 security.general.rememberMe.timeOut=1296000
 security.general.session.timeout=30
-security.general.ssl.enabled=false
+security.general.ssl.enabled=true
 security.general.ssl.port=443
 security.general.tokenService.enabled=true
 security.general.tokenService.parameter=WM_AUTH_TOKEN
