--- a/src/main/webapp/config.json
+++ b/src/main/webapp/config.json
@@ -1,1 +1,1 @@
-{"baseUrl":"{{DEVELOPMENT_URL}}","buildMode":"DEV","offlineStorage":true,"customUrlScheme":"com.vcalumni"}
+{"baseUrl":"https://ec2-54-202-110-83.us-west-2.compute.amazonaws.com/VCAlumni/","buildMode":"DEV","offlineStorage":true,"customUrlScheme":"com.vcalumni","customUrl":"https://ec2-54-202-110-83.us-west-2.compute.amazonaws.com/VCAlumni/"}
