Commit Thursday October 18th 12:15PM New files added - [Attendees,Register,adminMenu,android,blue-flyer,fonts,fonts,imagelists,ios,android] Files modified - [AddEvent,AddVenue,EditEvents,EventDetails,EventsList,Login,Main,VCADB_users,securityService,webapp,.wmproject.properties,project-security.xml,pages-config.json] Removed files - [SignUp,android,fonts,fonts,ios,mobile]

--- a/services/VCADB_users/src/VCADB_users-procedures.mappings.json
+++ b/services/VCADB_users/src/VCADB_users-procedures.mappings.json
@@ -1,4 +1,48 @@
 {
+  "change_attendee" : {
+    "procedureString" : "CALL change_attendee(?,?,?)",
+    "parameters" : [ {
+      "name" : "email_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    }, {
+      "name" : "event_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    }, {
+      "name" : "action_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    } ]
+  },
+  "add_attendees" : {
+    "procedureString" : "CALL add_attendee_records(?)",
+    "parameters" : [ {
+      "name" : "event_id",
+      "type" : "string",
+      "list" : false,
+      "variableType" : "PROMPT",
+      "variableName" : "",
+      "testValue" : "test",
+      "required" : true,
+      "parameterType" : "IN"
+    } ]
+  },
   "add_attendee" : {
     "procedureString" : "CALL add_attendee(?,?,?)",
     "parameters" : [ {
@@ -30,33 +74,15 @@
       "parameterType" : "IN"
     } ]
   },
-  "change_attendee" : {
-    "procedureString" : "CALL change_attendee(?,?,?)",
+  "add_new_user_events" : {
+    "procedureString" : "CALL add_events_newuser(?)",
     "parameters" : [ {
       "name" : "email_id",
       "type" : "string",
       "list" : false,
       "variableType" : "PROMPT",
       "variableName" : "",
-      "testValue" : "test",
-      "required" : true,
-      "parameterType" : "IN"
-    }, {
-      "name" : "event_id",
-      "type" : "string",
-      "list" : false,
-      "variableType" : "PROMPT",
-      "variableName" : "",
-      "testValue" : "test",
-      "required" : true,
-      "parameterType" : "IN"
-    }, {
-      "name" : "action_id",
-      "type" : "string",
-      "list" : false,
-      "variableType" : "PROMPT",
-      "variableName" : "",
-      "testValue" : "test",
+      "testValue" : "as@mail.com",
       "required" : true,
       "parameterType" : "IN"
     } ]
