--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -7,6 +7,13 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "Attendees",
+  "type" : "PAGE",
+  "params" : [ {
+    "name" : "eventname",
+    "type" : "string"
+  } ]
+}, {
   "name" : "Common",
   "type" : "PARTIAL",
   "params" : [ ]
@@ -44,7 +51,11 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
-  "name" : "SignUp",
+  "name" : "Register",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
+  "name" : "adminMenu",
   "type" : "PAGE",
   "params" : [ ]
 }, {
