--- a/.wmproject.properties
+++ b/.wmproject.properties
@@ -18,6 +18,6 @@
 <entry key="icon">default.png</entry>
 <entry key="displayName">VCAlumni</entry>
 <entry key="projectShellName">WM_DEFAULT</entry>
-<entry key="activeTheme">blue-flyer</entry>
+<entry key="activeTheme">blue-enterprise</entry>
 <entry key="description"/>
 </properties>
