Added email functionality New files added - [EmailService] Files modified - [Login,Register,VCADB_users,securityService,WEB-INF,profiles,pom.xml,app.properties,app.variables.json]

--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -1,3 +1,9 @@
+app.environment.authentication=true
+app.environment.host=smtp.gmail.com
+app.environment.password=Cpnarl11^
+app.environment.port=587
+app.environment.smtpServerTTLSEnabled=true
+app.environment.username=srao.1145
 app.proxy.enabled=false
 app.proxy.host=
 app.proxy.password=
