--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,13 @@
             </resource>
             <resource>
                 <filtering>true</filtering>
+                <directory>services/EmailService/src</directory>
+                <excludes>
+                    <exclude>**/*.java</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <filtering>true</filtering>
                 <directory>services/MD5Encryption/src</directory>
                 <excludes>
                     <exclude>**/*.java</exclude>
@@ -113,6 +120,7 @@
                         </goals>
                         <configuration>
                             <sources>
+                                <source>services/EmailService/src</source>
                                 <source>services/MD5Encryption/src</source>
                                 <source>services/VCADB_users/src</source>
                                 <source>services/securityService/src</source>
@@ -273,6 +281,11 @@
         </pluginRepository>
     </pluginRepositories>
     <dependencies>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.6</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
