--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,10 @@
-#Mon Oct 15 23:18:18 UTC 2018
+#Thu Oct 25 23:03:36 UTC 2018
+app.environment.authentication=${app.environment.authentication}
+app.environment.host=${app.environment.host}
+app.environment.password=${app.environment.password}
+app.environment.port=${app.environment.port}
+app.environment.smtpServerTTLSEnabled=${app.environment.smtpServerTTLSEnabled}
+app.environment.username=${app.environment.username}
 app.proxy.enabled=${app.proxy.enabled}
 app.proxy.host=${app.proxy.host}
 app.proxy.password=${app.proxy.password}
