Added email notifications and password encryption Files modified - [profiles,config.xml]

--- a/profiles/development.properties
+++ b/profiles/development.properties
@@ -1,9 +1,9 @@
 app.environment.authentication=true
 app.environment.host=smtp.gmail.com
-app.environment.password=Cpnarl11^
+app.environment.password=VC1922!!
 app.environment.port=587
 app.environment.smtpServerTTLSEnabled=true
-app.environment.username=srao.1145
+app.environment.username=alumni@mail.vc.bc.ca
 app.proxy.enabled=false
 app.proxy.host=
 app.proxy.password=
