fixed email address Files modified - [deployment.properties]

--- a/profiles/deployment.properties
+++ b/profiles/deployment.properties
@@ -3,7 +3,7 @@ app.environment.host=smtp.gmail.com
 app.environment.password=VC1922!!
 app.environment.port=587
 app.environment.smtpServerTTLSEnabled=true
-app.environment.username=alumni@vc.bc.ca
+app.environment.username=alumni@mail.vc.bc.ca
 app.proxy.enabled=false
 app.proxy.host=
 app.proxy.password=
