--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -55,6 +55,10 @@
   "type" : "PAGE",
   "params" : [ ]
 }, {
+  "name" : "SignUp",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "adminMenu",
   "type" : "PAGE",
   "params" : [ ]
