Change Password Files modified - [ForgotPassword,app.variables.json]

--- a/src/main/webapp/app.variables.json
+++ b/src/main/webapp/app.variables.json
@@ -686,6 +686,7 @@
     "dataSet" : [ ],
     "isList" : false,
     "maxResults" : 20,
+    "onError" : "Actions.passwordReset.invoke()",
     "startUpdate" : false,
     "autoUpdate" : true,
     "inFlightBehavior" : "executeLast",
