--- a/src/main/webapp/pages/pages-config.json
+++ b/src/main/webapp/pages/pages-config.json
@@ -66,6 +66,10 @@
     "type" : "string"
   } ]
 }, {
+  "name" : "SignIn",
+  "type" : "PAGE",
+  "params" : [ ]
+}, {
   "name" : "SignUp",
   "type" : "PAGE",
   "params" : [ ]
